# routes/index.js
@@ -2,4 +2,6 @@ const express = require('express');
 const router = express.Router();
 
 router.use("/players", require("./players"));
+router.use("/teams", require("./teams"));
+
 module.exports = router;
